<?xml version="1.0"?>
<package format="2">
  <name>customLib</name>
  <version>0.0.0</version>
  <description>The customLib package</description>

  <maintainer email="phphww93@gmail.com">hwPark</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rodpy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>rodpy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>rodpy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>livox_ros_driver2</build_depend>
  <exec_depend>livox_ros_driver2</exec_depend>


</package>
